hphp/test/slow/global_func/meth_caller/meth_caller_multiple.php.expectf
function(MethCaller$Ans\A::afunc)
int(2)
function(MethCaller$Ans\A::afunc)
int(4)
function(MethCaller$Ans\A::afunc)
int(2)
function(MethCaller$Ans\Bns\A::afunc)
int(3)
function(MethCaller$Ans\A::afunc)
int(8)

Fatal error: Uncaught exception 'HH\InvariantException' with message 'object must be an instance of (Ans\A)' in %s/meth_caller_multiple.php:18
Stack trace:
#0 (): HH\invariant_violation()
#1 %s/meth_caller_multiple.php(18): MethCaller$Ans\A::afunc()
#2 {main}
